--- a/j.html
+++ b/j.html
@@ -1,2 +1,15 @@
+<doctype HTML>
+<head>
 <script src='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.js'></script>
 <link href='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.css' rel='stylesheet' />
+  </head>
+<body>
+  <div id='map' style='width: 400px; height: 300px;'></div>
+<script>
+mapboxgl.accessToken = 'pk.eyJ1IjoibWJiMjMiLCJhIjoiY2s1b2U0ZW1rMWs5cDNrbzA4dndycHlvNiJ9.oIux-aFRCFOsnLMvzk5Fog';
+var map = new mapboxgl.Map({
+container: 'map',
+style: 'mapbox://styles/mapbox/streets-v11'
+});
+</script>
+  </body>
