--- a/idontknosw.html
+++ b/idontknosw.html
@@ -5,11 +5,12 @@
 <body>
   <style>
     p{
-    font-family: Georgia;
+    font-family: sans-serif;
     }
     a{
-    font-family:cursive;
+    font-family: cursive;
     }
+  </style>
   <h1>idontevenknow</h1>
   <p>Hey! You found this file some how! In case you are wondering, yes I am terrible at everything and go to my<a href="mikiebeeswebsite.000webhost.com">website!</a></p>
   </body>
