--- a/gg.html
+++ b/gg.html
@@ -4,8 +4,11 @@
 </head>
 <body>
   <script>
-  var i = 1;
-  for (i = 1) {
-  print("gg");
-  }
+ var i = 0;
+for (i = 0; i < cars.length; i++) {
+  text += cars[i] + "<br>";
+}
   </script>
+  <br> yes </br>
+  </body>
+  
