--- a/iwouldtryanddosomethingwith.jsonsbutcromeisameanieso.html
+++ b/iwouldtryanddosomethingwith.jsonsbutcromeisameanieso.html
@@ -1,11 +1,24 @@
 <doctype HTML>
 <head>
 <title> (╯°Д°)╯︵/(.□ . \)</title>
+  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
+  <style>
+    h1{
+      font-family: sans-serif;
+    }
+    h5{
+      font-family: cursive;
+    }
+    p{
+     font-family: 'Press Start 2P';
+    }
+    </style>
 <h1> 
-(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)(╯°Д°)╯︵/(.□ . \)vvv
+  i am watching a cringe worthy movie so gat me out why halp.
 </h1>
 <p> i am angry because of this movie we r watching in class pls help help</p>
 <h5> save urselves</h5>
+
 </body>
