--- a/iwouldtryanddosomethingwith.jsonsbutcromeisameanieso.html
+++ b/iwouldtryanddosomethingwith.jsonsbutcromeisameanieso.html
@@ -15,6 +15,7 @@
      font-family: 'Press Start 2P';
     }
     </style>
+  <p> made by michael beecher </p>
 <h1> 
   i am watching a cringe worthy movie so gat me out why halp.
 </h1>
